files/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 8001 }
static_resources:
  listeners:
  - name: ingress_http
    address:
      socket_address: { address: 0.0.0.0, port_value: 8000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/null
          route_config:
            name: local_route
            virtual_hosts:
            - name: webxp-api_http
              domains: ["*"]
              routes:
              - match: { prefix: "/static/v5.0" }
                route: { cluster: bodhi_static }
              - match: { prefix: "/"}
                route: { cluster: bodhi_web }
              
          http_filters:
          - name: envoy.router
  clusters:
  - name: bodhi_web
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    hosts:
    - socket_address: { address: 127.0.0.1, port_value: 6543 }
  - name: bodhi_static
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    hosts:
    - socket_address: { address: 127.0.0.1, port_value: 8080 }
